--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+abseil (20220623.1-3) unstable; urgency=medium
+
+  * Patch cycle-counting code for riscv64 to use the monotonic and
+    unprivileged rdtime instruction instead of rdcycle.
+
+ -- Benjamin Barenblat <bbaren@debian.org>  Wed, 09 Aug 2023 18:33:54 -0400
+
+abseil (20220623.1-2) unstable; urgency=medium
+
+  * Constrain build to GCC 12, since this version of Abseil doesn’t build
+    work with GCC 13.
+
+ -- Benjamin Barenblat <bbaren@debian.org>  Sun, 06 Aug 2023 11:55:52 -0400
+
 abseil (20220623.1-1) unstable; urgency=medium
 
   * New upstream release.
