--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+abseil (20220623.1-3deepin1) unstable; urgency=medium
+
+  * add g++13 build.
+
+ -- LiChengGang <lichenggang@uniontech.com>  Wed, 06 Dec 2023 13:16:06 +0800
+
 abseil (20220623.1-3) unstable; urgency=medium
 
   * Patch cycle-counting code for riscv64 to use the monotonic and
