--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+abseil (20220622.1-3deepin1) unstable; urgency=medium
+
+  * feat: add sw64 support
+
+ -- Deepin Packages Builder <packages@deepin.org>  Thu, 22 May 2025 13:23:08 +0800
+
 abseil (20220623.1-3) unstable; urgency=medium
 
   * Patch cycle-counting code for riscv64 to use the monotonic and
